--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,15 @@ h1 {
   text-align: center;
   margin-top: 32px;
 }
+
+#location {
+  width:  240px;
+}
+
+#gps-coordinates p {
+  margin-bottom: 0;
+}
+
+#map {
+  margin-top: 16px;
+}
